[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/berry_full_bush.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bush.gd" type="Script" id=2]
[ext_resource path="res://sprites/berryless_bush.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 10.5556

[sub_resource type="CircleShape2D" id=2]

[node name="Bush" type="RigidBody2D"]
mode = 1
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 7 )
scale = Vector2( 1.2, 1.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -5.83333 )
rotation = 1.5708
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="Area2D"]

[node name="full_sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="less_sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="grow_timer" type="Timer" parent="."]
wait_time = 100.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="grow_timer" to="." method="_on_grow_timer_timeout"]
